--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-dotenv": "^2.3.0",
     "react-native-elements": "^2.2.1",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-maps": "^0.26.1",
@@ -30,12 +29,14 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "expo-constants": "~9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "babel-preset-expo": "~8.1.0",
-    "metro-react-native-babel-preset": "^0.62.0"
+    "metro-react-native-babel-preset": "^0.62.0",
+    "react-native-dotenv": "^2.3.0"
   },
   "private": true
 }
