url and name changes

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "locapic",
-    "slug": "locapic",
+    "name": "Locapic",
+    "slug": "Locapic",
     "platforms": [
       "ios",
       "android",
