--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/masked-view": "0.1.6",
     "dotenv": "^8.2.0",
     "expo": "~37.0.3",
+    "expo-constants": "~9.0.0",
     "path": "^0.12.7",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -29,8 +30,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
-    "socket.io-client": "^2.3.0",
-    "expo-constants": "~9.0.0"
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
